# pricewise-chatbot

./: .gitignore  README.md  data.ndjson  pyproject.toml
line_webhook/: .env.example  README.md  local_run.sh  main.py  requirements.txt
line_webhook/commons/: build_flex_message.py  gemini_service.py  vertex_ai_search.py  vertext_ai_search.py
line_webhook/templates/: product_bubble.json  product_bubble2.json  product_item.json  product_item_without_image.json
templates/: product_bubble.json
web_scraper/: convert_to_ndjson.py  noc_noc_scraper.py
